# graphic-recording-mcp

./: .gitignore  README.md  pyproject.toml  start.sh
src/graphic_recording_mcp/: main.py
